# Back-PJG

./: db.sqlite3  pyproject.toml
backend/: settings.py  urls.py
pjgplantas/: admin.py  models.py  serializers.py  views.py
pjgplantas/migrations/: 0005_rename_cpf_pix_cnpj_remove_itenscarrinho_dt_entrega_and_more.py  0006_itenscarrinho_complemento.py  0007_remove_boleto_boleto_boleto_banco.py  0008_remove_boleto_banco.py  0009_alter_cartao_validade.py  0010_alter_cartao_validade.py  0011_alter_cartao_validade.py  0012_alter_cartao_validade.py  0013_alter_cartao_validade.py  0014_alter_cartao_validade.py  0015_alter_cartao_validade.py  0016_remove_pedidocarrinho_dt_entrega.py  0017_remove_comentario_comentario1_and_more.py  0018_rename_usuario1_comentario_comentario1_and_more.py  0019_remove_comentario_comentario1_and_more.py  0020_comentario_comentario1_comentario_comentario2.py  0021_remove_comentario_comentario1_and_more.py  0022_comentario_comentario1_comentario_comentario2.py
pjgplantas/templates/: home.html
